# diego-dapps-template-gear-academy

contracts/: .gitignore  Cargo.toml
contracts/01-tamagotchi/: README.md  build.rs
contracts/01-tamagotchi/src/: lib.rs
contracts/01-tamagotchi/state/: Cargo.toml
contracts/01-tamagotchi/tests/: smoke.rs
contracts/02-tamagotchi-interaction/src/: lib.rs
contracts/02-tamagotchi-interaction/tests/: interaction.rs
contracts/03-tamagotchi-nft/src/: lib.rs
contracts/03-tamagotchi-nft/tests/: owning.rs
contracts/04-tamagotchi-shop/src/: lib.rs
contracts/05-tamagotchi-auto/: Cargo.toml
contracts/05-tamagotchi-auto/io/: Cargo.toml
contracts/05-tamagotchi-auto/src/: lib.rs
contracts/06-tamagotchi-army/: Cargo.toml  build.rs
contracts/06-tamagotchi-army/io/: Cargo.toml
contracts/06-tamagotchi-army/src/: lib.rs
contracts/07-tamagotchi-battle/: Cargo.toml  build.rs
contracts/07-tamagotchi-battle/io/: Cargo.toml
contracts/07-tamagotchi-battle/io/src/: lib.rs
contracts/07-tamagotchi-battle/src/: lib.rs
contracts/07-tamagotchi-battle/state/src/: lib.rs
contracts/07-tamagotchi-battle/tests/: battle.rs
contracts/07-tamagotchi-st-new/: Cargo.toml  build.rs
contracts/07-tamagotchi-st-new/io/: Cargo.toml
contracts/07-tamagotchi-st-new/io/src/: lib.rs
contracts/07-tamagotchi-st-new/src/: lib.rs
contracts/07-tamagotchi-st-new/tests/: store.rs
contracts/escrow/: Cargo.toml
contracts/escrow-factory/: Cargo.toml
contracts/escrow-factory/io/: Cargo.toml
contracts/escrow-factory/tests/: escrow_factory_tests.rs
(+11 files in other folders)
