[package]
name = "tamagotchi-battle"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-battle-io.workspace = true
tamagotchi-auto-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-battle-io.workspace = true
tamagotchi-auto-io.workspace = true

[dev-dependencies]
gtest.workspace = true
tokio.workspace = true