[package]
name = "tamagotchi-store"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
gstd.workspace = true
tamagotchi-store-io.workspace = true
sharded-fungible-token-io.workspace = true

[build-dependencies]
gear-wasm-builder.workspace = true
tamagotchi-store-io.workspace = true